# heterogeneous-task-scheduler

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .markdownlint-cli2.jsonc  .markdownlint.json  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.en.md  README.md  README.zh-CN.md  SECURITY.md  WEBSITE_MODERNIZATION.md  _config.yml  index.md  specs
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  pages.yml
.kiro/: README.md
.kiro/specs/: README.md
.kiro/specs/heterogeneous-task-scheduler/: design.md  requirements.md  tasks.md
.kiro/specs/project-quality-assessment/: design.md  requirements.md  tasks.md
.opencode/: AGENTS.md
changelog/: 2026-03-09_workflow-optimization.md  2026-03-10_workflow-deep-standardization.md  2026-03-13_workflow-cpu-safe-ci.md  README.md
changelog/templates/: feature-change.md  infrastructure-change.md
docs/: README.md  index.md  installation.md  quickstart.md  specs-migration.md
docs/adr/: 0001-dag-first-architecture.md  0002-pluggable-scheduling-policy.md  0003-cpu-only-fallback-path.md  0004-buddy-memory-pool.md  0005-cuda-stream-management.md  0006-event-driven-profiling.md
docs/en/: api-reference.md  architecture.md  error-handling.md  examples.md  index.md  installation.md  memory-management.md  profiling.md  quickstart.md  scheduling-policies.md
docs/zh-CN/: architecture.md  error-handling.md  examples.md  index.md  installation.md  memory-management.md  profiling.md  quickstart.md  scheduling-policies.md
examples/: advanced_features.cpp  error_handling.cpp  fluent_api.cpp  gpu_computation.cu  graph_visualization.cpp  parallel_pipeline.cpp  profiling.cpp  scheduling_policies.cpp  simple_dag.cpp  task_groups.cpp
include/hts/: cuda_utils.hpp  dependency_manager.hpp  event_system.hpp  execution_engine.hpp  graph_serializer.hpp  heterogeneous_task_scheduler.hpp  logger.hpp  memory_pool.hpp  profiler.hpp  resource_limiter.hpp  retry_policy.hpp  scheduler.hpp  scheduling_policy.hpp  stream_manager.hpp  task.hpp  task_barrier.hpp  task_builder.hpp  task_context.hpp  task_future.hpp  task_graph.hpp  task_group.hpp  types.hpp
include/hts/internal/: cuda_stubs.hpp
openspec/: config.yaml
openspec/changes/deepen-execution-task-seams/: design.md  proposal.md  tasks.md
openspec/changes/deepen-graph-runtime-seams/: design.md  proposal.md  tasks.md
openspec/changes/extract-scheduler-runtime-core/: design.md  proposal.md  tasks.md
openspec/specs/: README.md
openspec/specs/closeout-readiness/: spec.md
openspec/specs/engineering-surface/: spec.md
openspec/specs/project-governance/: spec.md
openspec/specs/project-showcase/: spec.md
scripts/: analyze.sh  build.sh  coverage.sh  format.sh  install-hooks.sh  test.sh
specs/: README.md
specs/api/: README.md
specs/db/: README.md
specs/product/: 001-heterogeneous-task-scheduler.md  002-project-quality.md  tasks-core.md
specs/rfc/: 001-core-architecture.md  002-memory-pool.md  003-execution-engine.md  004-error-handling.md  005-profiling.md  006-quality-assessment.md
specs/testing/: core-tests.md
src/: cuda_stubs.cpp  dependency_manager.cpp  execution_engine.cu  memory_pool.cu  placeholder.cpp  scheduler.cu  stream_manager.cu  task.cpp  task_barrier.cpp  task_context.cpp  task_graph.cpp  task_group.cpp
src/core/: dependency_manager.cpp  execution_engine.cpp  scheduler.cpp  scheduling_policy.cpp  task.cpp  task_barrier.cpp  task_context.cpp  task_graph.cpp  task_group.cpp
src/cuda/: cuda_stubs.cpp  execution_engine.cu  memory_pool.cu  scheduler.cu  stream_manager.cu
tests/: test_cuda_utils.cpp  test_dependency_manager.cpp  test_event_system.cpp  test_execution_engine.cpp  test_graph_serializer.cpp  test_integration.cpp  test_logger.cpp  test_main.cpp  test_memory_pool.cpp  test_profiler.cpp  test_resource_limiter.cpp  test_retry_policy.cpp  test_scheduler.cpp  test_scheduling_policy.cpp  test_stream_manager.cpp  test_task.cpp  test_task_barrier.cpp  test_task_builder.cpp  test_task_future.cpp  test_task_graph.cpp  test_task_group.cpp
tests/integration/: test_execution_engine.cpp  test_integration.cpp
tests/unit/: test_cuda_utils.cpp  test_dependency_manager.cpp  test_event_system.cpp  test_graph_serializer.cpp  test_logger.cpp  test_memory_pool.cpp  test_profiler.cpp  test_repository_surface.cpp  test_resource_limiter.cpp  test_retry_policy.cpp  test_scheduler.cpp  test_scheduling_policy.cpp  test_stream_manager.cpp  test_task.cpp  test_task_barrier.cpp  test_task_builder.cpp  test_task_future.cpp  test_task_graph.cpp  test_task_group.cpp
website/: 404.md  DEPLOYMENT.md  README.md  changelog.md  contributing.md  index.md  package-lock.json  package.json
website/.vitepress/: config.mjs  config.mts
website/.vitepress/theme/: custom.css  index.mjs  style.css
website/api/: index.md  scheduler.md  task-builder.md  task-graph.md
website/benchmarks/: index.md
website/en/: index.md
website/en/api/: index.md  scheduler.md  task-builder.md  task-graph.md
website/en/benchmarks/: index.md
website/en/design/: index.md  philosophy.md
website/en/examples/: index.md  pipeline.md  simple-dag.md
website/en/guide/: architecture.md  error-handling.md  index.md  installation.md  memory.md  quickstart.md  scheduling.md  task-graph.md
website/en/research/: references.md  related-work.md
website/en/whitepaper/: complexity-analysis.md  dag-scheduling.md  heterogeneous-execution.md  index.md  memory-management.md  performance-analysis.md  performance-modeling.md
website/examples/: index.md  pipeline.md  simple-dag.md
website/guide/: architecture.md  error-handling.md  index.md  installation.md  memory.md  quickstart.md  scheduling.md  task-graph.md
website/zh/: index.md
website/zh-CN/: index.md
website/zh-CN/api/: index.md
website/zh-CN/benchmarks/: index.md
website/zh-CN/design/: philosophy.md
(+58 files in other folders)
